tests/ui/immutable_type.stderr
error: `immutable_type` requires Python >= 3.14
 --> tests/ui/immutable_type.rs:3:11
  |
3 | #[pyclass(immutable_type)]
  |           ^^^^^^^^^^^^^^
